# jpk_reader

./: .gitattributes  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
data/qi_data/: header.properties  qi_data-2_0-xs.jpk-qi-data  qi_data-sm.jpk-qi-data
data/qi_data/qi_data-2_0-xs/: data-image.jpk-qi-image  header.properties
data/scope/: time-current-deflection.out
data/voltage-spectroscopy/collection/: voltage-spectroscopy-2026.01.28-17.02.01.430.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.48.486.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.49.576.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.50.667.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.51.759.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.52.851.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.53.940.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.55.031.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.56.122.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.57.214.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.58.307.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.02.59.399.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.03.00.491.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.03.01.583.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.03.02.674.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.03.03.766.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.03.04.858.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.03.05.949.jpk-voltage-ramp  voltage-spectroscopy-2026.01.28-17.03.07.040.jpk-voltage-ramp  (+46 more)
gui/: Cargo.toml
gui/src/: main.rs
jpk_reader/: Cargo.toml
jpk_reader-py/: Cargo.toml  pyproject.toml
jpk_reader-py/examples/: qi_data.py
jpk_reader-py/src/: lib.rs
jpk_reader/src/: properties.rs
jpk_reader/src/qi_map/: mod.rs
jpk_reader/tests/: jpk_qi_data.rs
py/: Cargo.toml  README.md  jpk_reader_rs.pyi  pyproject.toml
py/examples/: qi_data.py  scope.py  voltage_spectroscopy.py
py/jpk_reader_rs-types/: __init__.pyi
py/jpk_reader_rs-types/qi_map/: __init__.pyi
py/jpk_reader_rs-types/scope/: __init__.pyi
py/src/: lib.rs  qi_map.rs  scope.rs  voltage_spectroscopy.rs
rs/: Cargo.toml
rs/src/: lib.rs  properties.rs  scope.rs  voltage_spectroscopy.rs
rs/src/dataset/: mod.rs  properties.rs
rs/src/dataset/v2_0/: lcd_info.rs  mod.rs  properties.rs
rs/src/qi_map/: mod.rs  v2_0.rs
rs/src/qi_map/v2_0/: lcd_info.rs  mod.rs
rs/tests/: jpk_qi_data.rs  voltage_spectroscopy.rs
src/qi_map/: mod.rs
tests/: jpk_qi_data.rs
(+40 files in other folders)
