[package]
name = "jpk_reader"
version = "0.0.1"
edition = "2024"

authors = ["Brian Carlsen <carlsen.bri@gmail.com>"]
description = "Read JPK AFM files."
license = "GNU GPLv3"

repository = "https://github.com/bicarlsen/jpk_reader"
keywords = ["afm", "atomic force microscopy", "jpk", "bruker"]
categories = ["science"]

[dependencies]
arrow = { version = "57.0", default-features = false, optional = true }
derive_more = { version = "2.0", features = ["from", "deref"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
zip = "6.0"

[dev-dependencies]
tracing-test = "0.2"

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
arrow = ["dep:arrow"]
