[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "jpk-reader-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Science/Research",
]
dynamic = ["version"]
description = "Read JPK AFM data files."
dependencies = ["pyarrow"]

[project.urls]
Issues = "https://github.com/bicarlsen/jpk_reader/issues"
Source = "https://github.com/bicarlsen/jpk_reader"
Homepage = "https://github.com/bicarlsen/jpk_reader"
