[package]
name = "jpk_reader"
version = "0.0.1"
edition = "2024"

authors = ["Brian Carlsen <carlsen.bri@gmail.com>"]
description = "Read JPK AFM files."
license = "GNU GPLv3"

repository = "https://github.com/bicarlsen/jpk_reader"
keywords = ["afm", "atomic force microscopy", "jpk", "bruker"]
categories = ["science"]

[dependencies]
derive_more = { workspace = true, features = ["from", "deref", "deref_mut"] }
polars = { workspace = true, features = [
    "lazy",
    "timezones", # NB: Not actually needed. See issue https://github.com/pola-rs/polars/issues/25231
    "dtype-u8",
], optional = true }
rayon = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
], optional = true }
zip = "7.4"

[dev-dependencies]
tracing-test = { workspace = true }

[features]
default = ["qi_map", "scope", "voltage_spectroscopy"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
qi_map = ["dep:rayon"]
scope = ["dep:polars"]
voltage_spectroscopy = []
